@@ -55,9 +55,7 @@ public class RegisterClientEventHandler {
 	
 	@SubscribeEvent
 	public static void registerClientTooltipComponentFactories(RegisterClientTooltipComponentFactoriesEvent event) {
-		event.register(ShulkerBoxTooltip.class, (tooltip) -> {
-			return new ClientShulkerBoxTooltip(tooltip);
-		});
+		event.register(ShulkerBoxTooltip.class, ClientShulkerBoxTooltip::new);
 	}
 	
 	@SubscribeEvent
@@ -69,9 +67,7 @@ public class RegisterClientEventHandler {
 			int blue = age * 4;
 			return red << 16 | green << 8 | blue;
 		}, XSBlocks.HONEY_MELON_STEM.get());
-		event.register((state, blockGetter, pos, i) -> {
-			return 14731036;
-		}, XSBlocks.ATTACHED_HONEY_MELON_STEM.get());
+		event.register((state, blockGetter, pos, i) -> 14731036, XSBlocks.ATTACHED_HONEY_MELON_STEM.get());
 	}
 	
 	@SubscribeEvent
@@ -81,7 +77,7 @@ public class RegisterClientEventHandler {
 	
 	@SubscribeEvent
 	public static void registerItemDecorations(RegisterItemDecorationsEvent event) {
-		for (Item item : ForgeRegistries.ITEMS.getValues().stream().map(ItemStack::new).filter(XSEnchantments.ASPECT_OF_THE_END.get()::canEnchant).map(ItemStack::getItem).collect(Collectors.toList())) {
+		for (Item item : ForgeRegistries.ITEMS.getValues().stream().map(ItemStack::new).filter(XSEnchantments.ASPECT_OF_THE_END.get()::canEnchant).map(ItemStack::getItem).toList()) {
 			event.register(item, new XSItemDecorator(Minecraft.getInstance()));
 		}
 	}
@@ -100,9 +96,7 @@ public class RegisterClientEventHandler {
 	
 	@SubscribeEvent
 	public static void registerClientCommands(RegisterRenderers event) {
-		event.registerEntityRenderer(XSEntityTypes.CURSED_ENDER_EYE.get(), (context) -> {
-			return new ThrownItemRenderer<>(context, 1.0F, true);
-		});
+		event.registerEntityRenderer(XSEntityTypes.CURSED_ENDER_EYE.get(), (context) -> new ThrownItemRenderer<>(context, 1.0F, true));
 	}
 	
 }
